2010-10-01  Marek Kowalski  <mkowalski@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/consumers/httpstreamer/resources.py:
	Introduce icy-streamer component and ICYResource class for parsing
	incoming request headers.
	* flumotion/test/test_component_icystreamer.py:
	Tests for new component.
	* flumotion/component/consumers/httpstreamer/icymux.py:
	Muxer producing application/x-icy stream combining title changes
	based on events.

2010-10-01  Marek Kowalski <mkowalski@flumotion.com>

	* flumotion/component/producers/icecast/icecast.py:
	Switch the iradio-mode on in icecast producer.
	Plug the icydemux component to produce audio stream.

2010-09-30  Marek Kowalski <mkowalski@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/consumers/httpstreamer/resources.py:
	* flumotion/component/test/test_http.py
	Support for more than one sink in streamer component.

2010-09-28  Marek Kowalski <mkowalski@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/consumers/httpstreamer/resources.py:
	Code refactoring in httpstreamer module.
	Split long methods into smaller parts so that it is
	easy to overload them in child class.

2010-10-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/effects/audioresync/Makefile.am:
	Add missing files to Makefile.am
	* flumotion/component/effects/audioresync (svn:ignore):
	Add missing files to svn:ignore


2010-10-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt
	* ChangeLog:
	* configure.ac:
	* flumotion/component/effects/Makefile.am:
	* flumotion/component/effects/audioresync/Makefile.am:
	* flumotion/component/effects/audioresync/__init__.py:
	* flumotion/component/effects/audioresync/admin_gtk.py:
	* flumotion/component/effects/audioresync/audioresync.glade: